# week3-ml

./: .gitignore  CONTRIBUTING.md  README.md  architecture.md  assignments.md  justfile  pyproject.toml  standards.md
.github/ISSUE_TEMPLATE/: feature_request.md
models/registry/: latest.txt
reports/: eval_summary.md  model_card.md
scripts/: README.md
src/ml_baseline/: cli.py  config.py  io.py  predict.py  sample_data.py  schema.py  splits.py  train.py  init.py
tests/: test_cli.py  test_schema_validate.py  test_train_predict.py
