[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "week3-ml-baseline-system"
version = "0.1.0"
description = "Week 3: ship-ready baseline ML system (train/eval/predict + artifacts)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.2",
  "joblib>=1.3",
  "typer>=0.12",
  "pytest>=9.0.2",
  "ruff>=0.14.10",
]

[project.optional-dependencies]
parquet = ["pyarrow>=12"]
viz = ["plotly>=5.0", "kaleido>=0.2.1"]
interpret = ["shap>=0.44"]
app = ["streamlit>=1.33"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
ml-baseline = "ml_baseline.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
